--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿
 
-<h1>Hello, world!</h1>
+<h1>Hola!</h1>
 
-Welcome to your new app.
+Bienvenio a la Tienda Falsa.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<button class="btn-primary">Ver productos</button>
